--- a/game.html
+++ b/game.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Board Game</title>
-    
+    <!-- font link -->
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     
     <!-- custom css style link -->
@@ -17,13 +19,15 @@
       <div class="row">
         <div class="col-md-4">
           <!-- Hint -->
+         <div class="hintContainer">
           <div class="hint" id="hint" style="display: none;">
-            <h3>you are at<span id="stepsAway"></span> steps away from the treasure</h3><br>
+            <h3>you are at<span id="stepsAway"></span> steps away from the Treasure</h3><br>
           </div>
           <div class="hint" id="foundTreasure" style="display: none;" >
-            <h3 >Yay, you Found the Treasure</h3>
+            <h3 >Yay, you Found the Treasure!</h3>
           </div>
         </div>
+         </div>
         <div class="col-md-8 mt-4 mt-md-0">
           <div class="game_container">
             <!-- Add row labels alphabetically -->
