--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Chessboard</title>
       <!-- custom css link -->
-      <link rel="stylesheet" href="./css/game_style.css">
+      <link rel="stylesheet" href="./game_style.css">
       <!-- google font -->
       <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
@@ -46,7 +46,7 @@
               </tr>
             </thead>
             <tbody>
-              <script src="./js/game_logic.js"></script>
+              <script src="./game_logic.js"></script>
             </tbody>
             <tfoot>
               <tr>
