--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Chessboard</title>
+    <title>TreasureHunt</title>
       <!-- custom css link -->
       <link rel="stylesheet" href="./game_style.css">
       <!-- google font -->
