--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </div>
     
           <div  id="foundTreasure" style="display: none;" >
-            <h3 >Yay, you Found the Treasure! <br><span><img src="./images/Treasure.png"  height='65' width='65' alt="treasure"></span> </h3>
+            <h3 >Yay, you Found the Treasure! <br><span><img src="./Treasure.png"  height='65' width='65' alt="treasure"></span> </h3>
           </div>
         </div>
      </div>
